WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
157544
Fix typo CaptionUserPreferences::updateCaptionStyleSheetOveride
https://bugs.webkit.org/show_bug.cgi?id=157544
Summary
Fix typo CaptionUserPreferences::updateCaptionStyleSheetOveride
Joseph Pecoraro
Reported
2016-05-10 16:00:53 PDT
Fix typo CaptionUserPreferences::updateCaptionStyleSheetOveride
Attachments
[PATCH] Proposed Fix
(3.29 KB, patch)
2016-05-10 16:01 PDT
,
Joseph Pecoraro
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Joseph Pecoraro
Comment 1
2016-05-10 16:01:28 PDT
Created
attachment 278544
[details]
[PATCH] Proposed Fix
WebKit Commit Bot
Comment 2
2016-05-10 22:02:42 PDT
Comment on
attachment 278544
[details]
[PATCH] Proposed Fix Clearing flags on attachment: 278544 Committed
r200673
: <
http://trac.webkit.org/changeset/200673
>
WebKit Commit Bot
Comment 3
2016-05-10 22:02:46 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug