Fix typo CaptionUserPreferences::updateCaptionStyleSheetOveride https://bugs.webkit.org/show_bug.cgi?id=157544

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2016-05-10
Reviewed by Darin Adler.

* page/CaptionUserPreferences.cpp:
(WebCore::CaptionUserPreferences::setCaptionsStyleSheetOverride):
(WebCore::CaptionUserPreferences::updateCaptionStyleSheetOverride):
(WebCore::CaptionUserPreferences::updateCaptionStyleSheetOveride): Deleted.
* page/CaptionUserPreferences.h:
* page/CaptionUserPreferencesMediaAF.cpp:
(WebCore::CaptionUserPreferencesMediaAF::updateTimerFired):
(WebCore::CaptionUserPreferencesMediaAF::captionPreferencesChanged):

Canonical link: https://commits.webkit.org/175699@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@200673 268f45cc-cd09-0410-ab3c-d52691b4dbfc